--- a/local_modules/directives/gq_navbar/style.styl
+++ b/local_modules/directives/gq_navbar/style.styl
@@ -22,3 +22,13 @@
     margin-right 20px
     position relative
     top 2px
+  .notifications-dropdown
+    width 370px
+    padding 0px
+  .notification-badge
+    padding: 2px 4px 2px;
+    font-size 9px
+    position: absolute;
+    right: 7px;
+    top: 20px;
+    font-weight: bold;
