Add formatting for notifications

--- a/local_modules/directives/gq_navbar/template.jade
+++ b/local_modules/directives/gq_navbar/template.jade
@@ -49,7 +49,7 @@ script(type="text/ng-template" id="notifications.html")
               a(uib-dropdown-toggle)
                 span.icon-link
                   i.fa.fa-bell.icon-link
-                span.badge.notification-badge.badge-primary {{myCtrl.notificationCount}}
+                span.badge.notification-badge.badge-warning {{myCtrl.notificationCount}}
               ul.dropdown-menu.notifications-dropdown(role="menu" aria-labelledby="single-button")
                 gq-notifications
             li(uib-dropdown)
