--- a/local_modules/directives/gq_notifications/style.styl
+++ b/local_modules/directives/gq_notifications/style.styl
@@ -1,5 +1,6 @@
 .gq-notifications
   .notification
+    color #666666
     display block
     padding 10px
     &:hover
@@ -13,3 +14,6 @@
     text-transform uppercase
     font-weight 500
     background-color #F5F5F5
+
+  .description-col
+    padding-left 5px
