--- a/local_modules/directives/gq_notifications/template.jade
+++ b/local_modules/directives/gq_notifications/template.jade
@@ -11,3 +11,5 @@
         i.fa.fa-trophy.text-arrow-up.fa-2x(ng-if='notification.type === "levelUp"')
       .col-xs-10.description-col
         div(ng-bind-html='ctrl.getDescription(notification)')
+        .time-ago {{ctrl.getTimeFromNow(notification.createdAt)}}
+
