Allow for scrolling through up to 20 notifications

--- a/local_modules/directives/gq_notifications/style.styl
+++ b/local_modules/directives/gq_notifications/style.styl
@@ -1,13 +1,17 @@
 .gq-notifications
-  .notification
-    color #666666
-    display block
-    padding 10px
-    &:hover
-      background-color #FBFBFB
-      cursor pointer
-    &:not(:last-child)
-      border-bottom: 1px solid #F5F5F5
+  .notifications
+    max-height 375px
+    overflow-y scroll
+
+    .notification
+      color #666666
+      display block
+      padding 10px
+      &:hover
+        background-color #FBFBFB
+        cursor pointer
+      &:not(:last-child)
+        border-bottom: 1px solid #F5F5F5
 
   .header
     padding 7px 10px
