--- a/app/pieces_by_level/template.jade
+++ b/app/pieces_by_level/template.jade
@@ -3,16 +3,16 @@
   //-   gq-notifications
   .row.previous-and-next
     .col-xs-12
-      .pull-left(ng-if='ctrl.selectedLevel > 1')
+      .pull-left(ng-if='ctrl.currentLevel > 1')
         a(href='' ng-click='ctrl.goToPreviousLevel()')
           span.fa.fa-angle-double-left
           span &nbsp;Previous
-      .pull-right(ng-if='ctrl.selectedLevel < ctrl.user.level')
+      .pull-right(ng-if='ctrl.currentLevel < ctrl.user.level')
         a(href='' ng-click='ctrl.goToNextLevel()')
           span Next&nbsp;
           span.fa.fa-angle-double-right
   .clearfix
-    h4.pull-left.user-level {{ctrl.levelHelper.getLevelName(ctrl.selectedLevel)}}
+    h4.pull-left.user-level {{ctrl.levelHelper.getLevelName(ctrl.currentLevel)}} Pieces
     .points-to-next-level.pull-right <strong>{{ctrl.levelPoints.completed}} / {{ctrl.levelPoints.total}}</strong> points to next level
   .row
     .col-xs-12
