--- a/local_modules/directives/gq_notifications/template.jade
+++ b/local_modules/directives/gq_notifications/template.jade
@@ -9,7 +9,7 @@
         .col-xs-2.text-right
           i.fa.fa-check.text-success.fa-2x(ng-if='notification.type === "pieceGraded"')
           i.fa.fa-trophy.text-warning.fa-2x(ng-if='notification.type === "challengeProgressed"')
-          i.fa.fa-trophy.text-arrow-up.fa-2x(ng-if='notification.type === "levelUp"')
+          i.fa.text-arrow-up.text-primary.fa-2x(ng-if='notification.type === "levelUp"')
         .col-xs-10.description-col
           div(ng-bind-html='ctrl.getDescription(notification)')
           .time-ago {{ctrl.getTimeFromNow(notification.createdAt)}}
