--- a/app/piece/style.styl
+++ b/app/piece/style.styl
@@ -71,3 +71,9 @@
 
   .inline-comment
     display inline-block
+
+  .custom-breadcrumb
+    font-size 14px
+    padding 0px
+    margin-top -5px
+    margin-bottom 3px
