--- a/app/confirm_email/template.jade
+++ b/app/confirm_email/template.jade
@@ -7,4 +7,4 @@
           p Thanks for signing up for GuitarQuest! We just sent a confirmation email to your registration email address. Click on the confirmation link in that email to complete your sign up.
   .row.content(ng-if='ctrl.loading')
     .text-center
-      i.loader.fa.fa-refresh.fa-spin.fa-3x
+      i.loader.fa.fa-refresh.fa-spin.fa-4x.full-page-loader
