--- a/local_modules/styles/index.styl
+++ b/local_modules/styles/index.styl
@@ -4,8 +4,8 @@
 .loader.ng-animate
   -webkit-animation: none 0s
 
-.loader
-  font-size 60px
+.full-page-loader
+  margin-top 50px
 
 .guitar-background-white
   margin-top -23px
