--- a/app/challenges/style.styl
+++ b/app/challenges/style.styl
@@ -20,6 +20,9 @@
     padding-bottom 10px
     border 2px solid #FF9800
 
+  .challenge-title
+    font-size 24px
+
   .challenge-panel-body
     padding 10px 20px
 
