--- a/local_modules/directives/gq_navbar/style.styl
+++ b/local_modules/directives/gq_navbar/style.styl
@@ -5,10 +5,16 @@
     margin-left 5px
   .icon-link
     font-size 17px
-  .level-summary
+  .user-summary
+    font-weight 500
     color gray
     margin-left 15px
-    margin-right 5px
+    margin-right 15px
+    .level-summary
+      color #ADADAD
+      margin-top 13px
+    .credit-summary
+      margin-top -5px
   .credit-summary
     font-size 12px
   .badge-warning
