Clicking logout takes you to signUp page

--- a/app/sign_up/template.jade
+++ b/app/sign_up/template.jade
@@ -12,4 +12,5 @@
                 input.form-control(id='lastName' type='text' placeholder='last name' ng-model='ctrl.form.lastName')
                 input.form-control(id='inputEmail' type='email' placeholder='email' ng-model='ctrl.form.email')
                 input.form-control(type='password' placeholder='password' ng-model='ctrl.form.password')
+                .input-helper-text 8 characters minimum
                 button.action-btn.btn.btn-primary.btn-block(type='submit') Sign up
