--- a/app/piece/style.styl
+++ b/app/piece/style.styl
@@ -73,6 +73,7 @@
     display inline-block
 
   .custom-breadcrumb
+    background-color transparent
     font-size 14px
     padding 0px
     margin-top -5px
