Add validation to sign up form

--- a/local_modules/styles/index.styl
+++ b/local_modules/styles/index.styl
@@ -48,6 +48,10 @@
   font-size 12px
   margin-top 2px
 
+.has-error
+  .input-helper-text
+    color #E51C23
+
 .btn-flat
   color #2196F3
   text-transform uppercase
