--- a/app/sign_up/template.jade
+++ b/app/sign_up/template.jade
@@ -7,10 +7,48 @@
             .panel-body.padded-panel
               h4.text-center.title Sign up for free
               uib-alert(type='danger' ng-if='ctrl.error' close='ctrl.error = undefined') {{ctrl.error}}
-              form(ng-submit='ctrl.register()')
-                input.form-control(id='firstName' type='text' placeholder='first name' ng-model='ctrl.form.firstName')
-                input.form-control(id='lastName' type='text' placeholder='last name' ng-model='ctrl.form.lastName')
-                input.form-control(id='inputEmail' type='email' placeholder='email' ng-model='ctrl.form.email')
-                input.form-control(type='password' placeholder='password' ng-model='ctrl.form.password')
-                .input-helper-text 8 characters minimum
+              form(
+                novalidate
+                name='signUpForm'
+                ng-submit='ctrl.register(signUpForm)'
+              )
+                div(ng-class='{"has-error": signUpForm.$submitted && !signUpForm.firstName.$valid}')
+                  input.form-control(
+                    name='firstName'
+                    type='text'
+                    ng-minlength='1'
+                    ng-required='true'
+                    placeholder='first name'
+                    ng-model='ctrl.form.firstName'
+                  )
+                  .input-helper-text(ng-if='signUpForm.$submitted && !signUpForm.firstName.$valid') first name required
+                div(ng-class='{"has-error": signUpForm.$submitted && !signUpForm.lastName.$valid}')
+                  input.form-control(
+                    name='lastName'
+                    type='text'
+                    ng-minlength='1'
+                    ng-required='true'
+                    placeholder='last name'
+                    ng-model='ctrl.form.lastName'
+                  )
+                  .input-helper-text(ng-if='signUpForm.$submitted && !signUpForm.lastName.$valid') last name required
+                div(ng-class='{"has-error": signUpForm.$submitted && !signUpForm.email.$valid}')
+                  input.form-control(
+                    name='email'
+                    type='email'
+                    ng-required='true'
+                    placeholder='email'
+                    ng-model='ctrl.form.email'
+                  )
+                  .input-helper-text(ng-if='signUpForm.$submitted && !signUpForm.email.$valid') must be a valid email address
+                div(ng-class='{"has-error": signUpForm.$submitted && !signUpForm.password.$valid}')
+                  input.form-control(
+                    name='password'
+                    type='password'
+                    ng-minlength='8'
+                    ng-required='true'
+                    placeholder='password'
+                    ng-model='ctrl.form.password'
+                  )
+                  .input-helper-text 8 characters minimum
                 button.action-btn.btn.btn-primary.btn-block(type='submit') Sign up
